# game_game_controller_framework

./: BUILD.gn  OAT.xml  README.OpenSource  README.md  README_zh.md  bundle.json  game_controller_framework.gni
etc/: BUILD.gn
etc/config/: device_config.json
etc/init/: BUILD.gn  gamecontroller_server.cfg
frameworks/native/: BUILD.gn  IGameControllerServerInterface.idl
frameworks/native/bundle_info/include/: bundle_manager.h
frameworks/native/bundle_info/src/: bundle_manager.cpp
frameworks/native/common/include/: gamecontroller_client_model.h  gamecontroller_constants.h  gamecontroller_errors.h  gamecontroller_keymapping_model.h  gamecontroller_log.h  gamecontroller_utils.h
frameworks/native/common/src/: gamecontroller_keymapping_model.cpp  gamecontroller_utils.cpp
frameworks/native/event/include/: gamecontroller_event_log.h  public_event_listener.h
frameworks/native/event/src/: entryModule.cpp  public_event_listener.cpp
frameworks/native/gamecontroller_service/include/: gamecontroller_server_client.h  gamecontroller_server_client_proxy.h
frameworks/native/gamecontroller_service/src/: gamecontroller_server_client.cpp  gamecontroller_server_client_proxy.cpp
frameworks/native/input_to_touch/include/: input_to_touch_client.h
frameworks/native/input_to_touch/src/: input_to_touch_client.cpp
frameworks/native/key_mapping/include/: combination_key_to_touch_handler.h  crosshair_key_to_touch_handler.h  dpad_key_to_touch_handler.h  gamepad_skill_cancel_to_touch_handler.h  gamepad_skill_to_touch_handler.h  input_to_touch_client.h  key_mapping_handle.h  key_mapping_service.h  key_to_touch_handler.h  key_to_touch_manager.h  keyboard_observation_to_touch_handler.h  mouse_left_fire_to_touch_handler.h  mouse_observation_to_touch_handler.h  mouse_right_key_click_to_touch_handler.h  mouse_right_key_walking_to_touch_handler.h  observation_key_to_touch_handler.h  single_key_to_touch_handler.h  skill_key_to_touch_handler.h  stick_timer_manager.h  thumb_stick_fps_observation_to_touch_handler.h  thumb_stick_observation_to_touch_handler.h  thumb_stick_walking_to_touch_handler.h  trigger_to_touch_handler.h
frameworks/native/key_mapping/src/: combination_key_to_touch_handler.cpp  crosshair_key_to_touch_handler.cpp  dpad_key_to_touch_handler.cpp  gamepad_skill_cancel_to_touch_handler.cpp  gamepad_skill_to_touch_handler.cpp  input_to_touch_client.cpp  key_mapping_handle.cpp  key_mapping_service.cpp  key_to_touch_handler.cpp  key_to_touch_manager.cpp  keyboard_observation_to_touch_handler.cpp  mouse_left_fire_to_touch_handler.cpp  mouse_observation_to_touch_handler.cpp  mouse_right_key_click_to_touch_handler.cpp  mouse_right_key_walking_to_touch_handler.cpp  observation_key_to_touch_handler.cpp  single_key_to_touch_handler.cpp  skill_key_to_touch_handler.cpp  stick_timer_manager.cpp  thumb_stick_fps_observation_to_touch_handler.cpp  thumb_stick_observation_to_touch_handler.cpp  thumb_stick_walking_to_touch_handler.cpp  trigger_to_touch_handler.cpp
frameworks/native/multi_modal_input/include/: device_event_callback.h  device_identify_service.h  device_info_service.h  game_device_client.h  input_device_listener.h  multi_modal_input_mgt_service.h  multi_modal_input_monitor.h
frameworks/native/multi_modal_input/src/: device_event_callback.cpp  device_identify_service.cpp  device_info_service.cpp  game_device_client.cpp  input_device_listener.cpp  multi_modal_input_mgt_service.cpp  multi_modal_input_monitor.cpp
frameworks/native/plugin/include/: plugin_callback_manager.h  plugin_client.h  plugin_event_callback.h  plugin_manager.h
frameworks/native/plugin/src/: plugin_callback_manager.cpp  plugin_client.cpp  plugin_manager.cpp
frameworks/native/window/include/: input_event_callback.h  (+4 more)
interfaces/kits/c/: BUILD.gn  game_controller_type.h  game_device.cpp  game_device.h  game_device_event.cpp  game_device_event.h  game_pad.cpp  game_pad.h  game_pad_event.cpp  game_pad_event.h  libohgame_controller.ndk.json
service/: BUILD.gn
service/common/include/: json_utils.h  permission_utils.h
service/common/src/: json_utils.cpp  permission_utils.cpp
service/device_manager/include/: device_manager.h
service/device_manager/src/: device_manager.cpp
service/event/include/: event_publisher.h
service/event/src/: event_publisher.cpp
service/ipc/include/: ability_event_handler.h  gamecontroller_server_ability.h
service/ipc/src/: ability_event_handler.cpp  gamecontroller_server_ability.cpp
service/key_mapping/include/: game_support_key_mapping_manager.h
service/key_mapping/src/: game_support_key_mapping_manager.cpp  key_mapping_config_manager.cpp
service/key_mapping_manager/include/: game_support_key_mapping_manager.h  key_mapping_config_manager.h
service/key_mapping_manager/src/: game_support_key_mapping_manager.cpp  key_mapping_config_manager.cpp
test/fuzztest/syncsupportkeymappinggames_fuzzer/: BUILD.gn  syncsupportkeymappinggames_fuzzer.cpp  syncsupportkeymappinggames_fuzzer.h
test/unittest/: BUILD.gn
test/unittest/common/: gamecontroller_client_model_test.cpp  gamecontroller_keymapping_model_test.cpp  gamecontroller_utils_test.cpp
test/unittest/key_mapping/: combination_key_to_touch_handler_test.cpp  crosshaire_key_to_touch_handler_test.cpp  dpad_key_to_touch_handler_test.cpp  key_mapping_handle_test.cpp  key_to_touch_handler_test.cpp  key_to_touch_manager_test.cpp  keyboard_observation_to_touch_handler_test.cpp  mouse_left_fire_to_touch_handler_test.cpp  mouse_observation_to_touch_handler_test.cpp  mouse_right_key_click_to_touch_handler_test.cpp  mouse_right_key_walking_to_touch_handler_test.cpp  observation_key_to_touch_handler_test.cpp  single_key_to_touch_handler_test.cpp  skill_key_to_touch_handler_test.cpp
test/unittest/multi_modal_input/: device_event_callback_impl.h  device_event_callback_test.cpp  device_identify_service_test.cpp  game_device_client_test.cpp  multi_modal_input_mgt_service_test.cpp
test/unittest/window/: gamepad_event_callback_impl.h  input_event_callback_test.cpp  input_event_client_test.cpp  window_input_intercept_test.cpp
(+43 files in other folders)
