# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################################

group("game_controller_framework_packages") {
  deps = [
    "etc:game_controller_service_business_config",
    "etc/init:gamecontroller_server.cfg",
    "frameworks/native:gamecontroller_client",
    "frameworks/native:gamecontroller_event",
    "frameworks/native:gamecontroller_fwk_client",
    "interfaces/kits/c:ohgame_controller",
    "sa_profile:game_controller_sa_profile",
    "service:gamecontroller_server",
  ]
}
