# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//domains/game/game_controller_framework/game_controller_framework.gni")

config("game_controller_capi_config") {
  include_dirs = [
    "$game_controller_framework_capi_path/c",
    "$game_controller_framework_path/frameworks/capi/include",
  ]

  cflags = [
    "-fstack-protector-strong",
    "-fstack-protector-all",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]
  cflags_cc = cflags

  defines = []
}

ohos_shared_library("ohgame_controller") {
  install_enable = true
  sources = [
    "$game_controller_framework_capi_path/c/game_device.cpp",
    "$game_controller_framework_capi_path/c/game_device_event.cpp",
    "$game_controller_framework_capi_path/c/game_pad.cpp",
    "$game_controller_framework_capi_path/c/game_pad_event.cpp",
    "$game_controller_framework_path/frameworks/capi/src/game_device_event_proxy.cpp",
    "$game_controller_framework_path/frameworks/capi/src/game_device_proxy.cpp",
    "$game_controller_framework_path/frameworks/capi/src/game_pad_event_proxy.cpp",
    "$game_controller_framework_path/frameworks/capi/src/game_pad_proxy.cpp",
  ]

  public_configs = [ ":game_controller_capi_config" ]

  deps = [
    "${game_controller_framework_innerkits_path}:gamecontroller_client",
    "${game_controller_framework_innerkits_path}:gamecontroller_fwk_client",
  ]

  public_external_deps = []

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
  relative_install_dir = "ndk/"
  subsystem_name = "game"
  part_name = "game_controller_framework"
}
