# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")
import("//build/test.gni")
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//domains/game/game_controller_framework/game_controller_framework.gni")

ohos_fuzztest("SyncSupportKeyMappingGamesFuzzTest") {
  module_out_path = "game_controller_framework/game_controller_framework"
  include_dirs = fuzztest_include_dirs + [
    "../mock/sa_mock.h",
  ]

  fuzz_config_file = "."

  cflags = [
    "-g",
    "-w",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = fuzztest_sources + ["syncsupportkeymappinggames_fuzzer.cpp"]

  deps = [
    "${game_controller_service_path}/service:gamecontroller_server",
  ]

  external_deps = fuzztest_external_deps
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [":SyncSupportKeyMappingGamesFuzzTest"]  #引用测试套
}
